--- a/apps/web/src/content/docs/components/tabs.mdx
+++ b/apps/web/src/content/docs/components/tabs.mdx
@@ -4,15 +4,16 @@ description: Minimal accessible tabs component with vanilla JS and Tailwind CSS.
 ---
 
 import { Tabs as DocsTabs, TabItem as DocsTabItem } from '@astrojs/starlight/components';
-import Tabs from '@bejamas/ui/components/Tabs.astro';
+
 import Button from '@bejamas/ui/components/Button.astro';
 import Card from '@bejamas/ui/components/Card.astro';
+import Tabs from '@bejamas/ui/components/Tabs.astro';
 
 Minimal accessible tabs component with vanilla JS and Tailwind CSS.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <Tabs>
   <div slot="tablist" class="space-x-2 mb-4">
     <Button role="tab" size="sm" aria-selected="true" variant="ghost" class="aria-selected:bg-primary aria-selected:text-primary-foreground">All Posts</Button>
@@ -34,6 +35,12 @@ Minimal accessible tabs component with vanilla JS and Tailwind CSS.
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Button from '@bejamas/ui/components/Button.astro';
+import Card from '@bejamas/ui/components/Card.astro';
+import Tabs from '@bejamas/ui/components/Tabs.astro';
+---
+
 <Tabs>
   <div slot="tablist" class="space-x-2 mb-4">
     <Button role="tab" size="sm" aria-selected="true" variant="ghost" class="aria-selected:bg-primary aria-selected:text-primary-foreground">All Posts</Button>
