--- a/apps/web/src/content/docs/components/button.mdx
+++ b/apps/web/src/content/docs/components/button.mdx
@@ -3,22 +3,40 @@ title: Button
 description: Displays a button or a component that looks like a button.
 ---
 
+import { ArrowUpIcon, ArrowUpRightIcon } from '@lucide/astro';
 import { Tabs as DocsTabs, TabItem as DocsTabItem } from '@astrojs/starlight/components';
-import Button from '@bejamas/ui/components/Button.astro';
+
 import Badge from '@bejamas/ui/components/Badge.astro';
+import Button from '@bejamas/ui/components/Button.astro';
 
 Displays a button or a component that looks like a button.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
-<Button>Click me</Button>
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
+<div class="flex flex-wrap items-center gap-2 md:flex-row">
+  <Button>Button</Button>
+  <Button variant="outline" size="icon" aria-label="Submit">
+    <ArrowUpIcon />
+  </Button>
+</div>
     </div>
   </DocsTabItem>
   <DocsTabItem label="Source">
 
 ```astro
-<Button>Click me</Button>
+---
+import { ArrowUpIcon } from '@lucide/astro';
+
+import Button from '@bejamas/ui/components/Button.astro';
+---
+
+<div class="flex flex-wrap items-center gap-2 md:flex-row">
+  <Button>Button</Button>
+  <Button variant="outline" size="icon" aria-label="Submit">
+    <ArrowUpIcon />
+  </Button>
+</div>
 ```
   </DocsTabItem>
 </DocsTabs>
@@ -66,23 +84,15 @@ Displays a button or a component that looks like a button.
  * @component Button
  * @title Button
  * @description Displays a button or a component that looks like a button.
- * @status stable
- * @since 0.1.0
  *
  * @example
  *
- * <Button>Click me</Button>
- *
- * @props
- * - as?: "button" | "a" | "div" | "span" — Element to render. Default: "button"
- * - className?: string — If set, adds a class to the component.
- * - variant?: "default" | "destructive" | "outline" | "secondary" | "ghost" | "link" — Sets style. Default: "default"
- * - size?: "default" | "sm" | "lg" | "icon" — Sets size. Default: "default"
- *
- * @a11y
- * - Uses focus-visible outline
- * - Honors prefers-reduced-motion
- *
+ * <div class="flex flex-wrap items-center gap-2 md:flex-row">
+ *   <Button>Button</Button>
+ *   <Button variant="outline" size="icon" aria-label="Submit">
+ *     <ArrowUpIcon />
+ *   </Button>
+ * </div>
  *
  * @usage
  *
@@ -121,10 +131,29 @@ Displays a button or a component that looks like a button.
  *
  * ### Sizes
  *
- * <div class="flex gap-2 items-center">
- *   <Button variant="default" size="sm">Click me</Button>
- *   <Button variant="default">Click me</Button>
- *   <Button variant="default" size="lg">Click me</Button>
+ * <div class="flex flex-col items-start gap-8 sm:flex-row">
+ *   <div class="flex items-start gap-2">
+ *     <Button size="sm" variant="outline">
+ *       Small
+ *     </Button>
+ *     <Button size="icon-sm" aria-label="Submit" variant="outline">
+ *       <ArrowUpRightIcon />
+ *     </Button>
+ *   </div>
+ *   <div class="flex items-start gap-2">
+ *     <Button variant="outline">Default</Button>
+ *     <Button size="icon" aria-label="Submit" variant="outline">
+ *       <ArrowUpRightIcon />
+ *     </Button>
+ *   </div>
+ *   <div class="flex items-start gap-2">
+ *     <Button variant="outline" size="lg">
+ *       Large
+ *     </Button>
+ *     <Button size="icon-lg" aria-label="Submit" variant="outline">
+ *       <ArrowUpRightIcon />
+ *     </Button>
+ *   </div>
  * </div>
  *
  * ### With badge
@@ -162,10 +191,10 @@ Displays a button or a component that looks like a button.
 
 import type { HTMLTag, Polymorphic } from "astro/types";
 import { cva } from "class-variance-authority";
-import { cn } from "@bejamas/ui/lib/utils";
+import { cn } from "../lib/utils";
 
-type Props<Tag extends HTMLTag> = Polymorphic<{
-  as: Tag;
+type Props = {
+  as?: HTMLTag;
   variant?:
     | "default"
     | "destructive"
@@ -173,17 +202,16 @@ type Props<Tag extends HTMLTag> = Polymorphic<{
     | "secondary"
     | "ghost"
     | "link";
-  class?: string;
   size?: "default" | "sm" | "lg" | "icon";
-}>;
+};
 
 const {
-  as = "button",
+  as: Tag = "button",
   variant = "default",
   size = "default",
   class: className = "",
   ...props
-} = Astro.props as Props<typeof as>;
+} = Astro.props as Props;
 
 const buttonVariants = cva(
   "inline-flex ease-in-out border-border items-center justify-center gap-2 whitespace-nowrap rounded-lg font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive active:scale-98",
@@ -197,17 +225,18 @@ const buttonVariants = cva(
         outline:
           "border shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50",
         secondary:
-          "bg-secondary shadow-xs text-secondary-foreground hover:bg-secondary/80",
+          "bg-secondary text-secondary-foreground hover:bg-secondary/80",
         ghost:
           "hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50",
         link: "text-accent-foreground underline-offset-4 hover:underline p-0",
       },
       size: {
-        default:
-          "h-9.5 px-4 py-2 text-sm has-[.badge:last-child]:pr-1.5 has-[.badge:first-child]:pl-1.5",
+        default: "h-9.5 px-4 py-2 text-sm has-[.badge:last-child]:pr-1.5 ",
         sm: "h-8.5 text-xs rounded-lg gap-1.5 px-3.5 has-[>svg]:px-2.5",
         lg: "h-10 text-sm rounded-lg px-4 has-[>svg]:px-4 has-[.badge:last-child]:pr-3 [&_.badge:last-child]:ml-1.5",
         icon: "size-9.5",
+        "icon-sm": "size-8.5",
+        "icon-lg": "size-10",
       },
     },
     defaultVariants: {
@@ -216,8 +245,6 @@ const buttonVariants = cva(
     },
   },
 );
-
-const Tag = as;
 ---
 
 <Tag class={cn(buttonVariants({ variant, size, className }))} {...props}>
@@ -250,13 +277,21 @@ import Button from '@bejamas/ui/components/Button.astro';
 <Button as="a" href="https://bejamas.com">Click me</Button>
 ```
 
+## Props
+
+| Prop | Type | Default |
+|---|---|---|
+| <code>as</code> | `HTMLTag` | `"button"` |
+| <code>variant</code> | `\| "default" \| "destructive" \| "outline" \| "secondary" \| "ghost" \| "link"` | `"default"` |
+| <code>size</code> | `"default" \| "sm" \| "lg" \| "icon"` | `"default"` |
+
 ## Examples
 
 ### Variants
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <div class="flex gap-3 items-center">
   <Button variant="default">Default</Button>
   <Button variant="secondary">Secondary</Button>
@@ -269,6 +304,10 @@ import Button from '@bejamas/ui/components/Button.astro';
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Button from '@bejamas/ui/components/Button.astro';
+---
+
 <div class="flex gap-3 items-center">
   <Button variant="default">Default</Button>
   <Button variant="secondary">Secondary</Button>
@@ -284,21 +323,65 @@ import Button from '@bejamas/ui/components/Button.astro';
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
-<div class="flex gap-2 items-center">
-  <Button variant="default" size="sm">Click me</Button>
-  <Button variant="default">Click me</Button>
-  <Button variant="default" size="lg">Click me</Button>
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
+<div class="flex flex-col items-start gap-8 sm:flex-row">
+  <div class="flex items-start gap-2">
+    <Button size="sm" variant="outline">
+      Small
+    </Button>
+    <Button size="icon-sm" aria-label="Submit" variant="outline">
+      <ArrowUpRightIcon />
+    </Button>
+  </div>
+  <div class="flex items-start gap-2">
+    <Button variant="outline">Default</Button>
+    <Button size="icon" aria-label="Submit" variant="outline">
+      <ArrowUpRightIcon />
+    </Button>
+  </div>
+  <div class="flex items-start gap-2">
+    <Button variant="outline" size="lg">
+      Large
+    </Button>
+    <Button size="icon-lg" aria-label="Submit" variant="outline">
+      <ArrowUpRightIcon />
+    </Button>
+  </div>
 </div>
     </div>
   </DocsTabItem>
   <DocsTabItem label="Source">
 
 ```astro
-<div class="flex gap-2 items-center">
-  <Button variant="default" size="sm">Click me</Button>
-  <Button variant="default">Click me</Button>
-  <Button variant="default" size="lg">Click me</Button>
+---
+import { ArrowUpRightIcon } from '@lucide/astro';
+
+import Button from '@bejamas/ui/components/Button.astro';
+---
+
+<div class="flex flex-col items-start gap-8 sm:flex-row">
+  <div class="flex items-start gap-2">
+    <Button size="sm" variant="outline">
+      Small
+    </Button>
+    <Button size="icon-sm" aria-label="Submit" variant="outline">
+      <ArrowUpRightIcon />
+    </Button>
+  </div>
+  <div class="flex items-start gap-2">
+    <Button variant="outline">Default</Button>
+    <Button size="icon" aria-label="Submit" variant="outline">
+      <ArrowUpRightIcon />
+    </Button>
+  </div>
+  <div class="flex items-start gap-2">
+    <Button variant="outline" size="lg">
+      Large
+    </Button>
+    <Button size="icon-lg" aria-label="Submit" variant="outline">
+      <ArrowUpRightIcon />
+    </Button>
+  </div>
 </div>
 ```
   </DocsTabItem>
@@ -308,7 +391,7 @@ import Button from '@bejamas/ui/components/Button.astro';
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <Button variant="default">
   Click me
   <Badge variant="secondary" shape="pill">Value</Badge>
@@ -318,6 +401,11 @@ import Button from '@bejamas/ui/components/Button.astro';
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Badge from '@bejamas/ui/components/Badge.astro';
+import Button from '@bejamas/ui/components/Button.astro';
+---
+
 <Button variant="default">
   Click me
   <Badge variant="secondary" shape="pill">Value</Badge>
@@ -330,13 +418,17 @@ import Button from '@bejamas/ui/components/Button.astro';
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <Button variant="destructive">Click me</Button>
     </div>
   </DocsTabItem>
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Button from '@bejamas/ui/components/Button.astro';
+---
+
 <Button variant="destructive">Click me</Button>
 ```
   </DocsTabItem>
@@ -346,13 +438,17 @@ import Button from '@bejamas/ui/components/Button.astro';
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <Button variant="outline">Click me</Button>
     </div>
   </DocsTabItem>
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Button from '@bejamas/ui/components/Button.astro';
+---
+
 <Button variant="outline">Click me</Button>
 ```
   </DocsTabItem>
@@ -362,13 +458,17 @@ import Button from '@bejamas/ui/components/Button.astro';
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <Button variant="secondary">Click me</Button>
     </div>
   </DocsTabItem>
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Button from '@bejamas/ui/components/Button.astro';
+---
+
 <Button variant="secondary">Click me</Button>
 ```
   </DocsTabItem>
@@ -378,13 +478,17 @@ import Button from '@bejamas/ui/components/Button.astro';
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <Button variant="ghost">Click me</Button>
     </div>
   </DocsTabItem>
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Button from '@bejamas/ui/components/Button.astro';
+---
+
 <Button variant="ghost">Click me</Button>
 ```
   </DocsTabItem>
@@ -394,13 +498,17 @@ import Button from '@bejamas/ui/components/Button.astro';
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <Button variant="link">Click me</Button>
     </div>
   </DocsTabItem>
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Button from '@bejamas/ui/components/Button.astro';
+---
+
 <Button variant="link">Click me</Button>
 ```
   </DocsTabItem>
@@ -410,13 +518,17 @@ import Button from '@bejamas/ui/components/Button.astro';
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <Button>Click me</Button>
     </div>
   </DocsTabItem>
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Button from '@bejamas/ui/components/Button.astro';
+---
+
 <Button>Click me</Button>
 ```
   </DocsTabItem>
