--- a/apps/web/src/content/docs/components/input.mdx
+++ b/apps/web/src/content/docs/components/input.mdx
@@ -4,19 +4,24 @@ description: Base input field used in forms.
 ---
 
 import { Tabs as DocsTabs, TabItem as DocsTabItem } from '@astrojs/starlight/components';
+
 import Input from '@bejamas/ui/components/Input.astro';
 
 Base input field used in forms.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <Input type="text" placeholder="Enter your email" />
     </div>
   </DocsTabItem>
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Input from '@bejamas/ui/components/Input.astro';
+---
+
 <Input type="text" placeholder="Enter your email" />
 ```
   </DocsTabItem>
