--- a/apps/web/src/content/docs/components/select.mdx
+++ b/apps/web/src/content/docs/components/select.mdx
@@ -4,14 +4,15 @@ description: Accessible select with custom styling and indicator.
 ---
 
 import { Tabs as DocsTabs, TabItem as DocsTabItem } from '@astrojs/starlight/components';
-import Select from '@bejamas/ui/components/Select.astro';
+
 import Label from '@bejamas/ui/components/Label.astro';
+import Select from '@bejamas/ui/components/Select.astro';
 
 Accessible select with custom styling and indicator.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border rounded-xl min-h-[450px] items-center">
 <div class="flex flex-col gap-2">
   <Label for="fruits">Select a fruit</Label>
   <Select id="fruits" class="w-[180px]">
@@ -25,6 +26,11 @@ Accessible select with custom styling and indicator.
   <DocsTabItem label="Source">
 
 ```astro
+---
+import Label from '@bejamas/ui/components/Label.astro';
+import Select from '@bejamas/ui/components/Select.astro';
+---
+
 <div class="flex flex-col gap-2">
   <Label for="fruits">Select a fruit</Label>
   <Select id="fruits" class="w-[180px]">
@@ -96,39 +102,29 @@ Accessible select with custom styling and indicator.
  */
 
 import { ChevronDown } from "@lucide/astro";
+import type { HTMLAttributes } from "astro/types";
 import { cva } from "class-variance-authority";
 import { cn } from "../lib/utils";
 
-interface Props {
-  label?: string;
-  value?: string;
-  name?: string;
-  id?: string;
-  required?: boolean;
-  disabled?: boolean;
+interface Props extends HTMLAttributes<"select"> {
   variant?: "default" | "ghost" | "neutral";
-  optionClass?: string;
-  class?: string;
   showCheckmark?: boolean;
+  options?: Array<
+    string | { value: string; label?: string; disabled?: boolean }
+  >;
 }
 
 const {
-  label = "",
-  options = [],
-  value = "",
-  name = "",
   id = "",
-  required = false,
-  disabled = false,
   variant = "default",
-  optionClass = "",
   class: className = "",
   showCheckmark = true,
+  options = [],
   ...rest
-} = Astro.props;
+} = Astro.props as Props;
 
 const baseClasses =
-  "block w-full select appearance-none relative shadow-xs rounded-md bg-background ps-4 pe-10 py-2 text-sm text-foreground transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:border-ring disabled:cursor-not-allowed disabled:opacity-50";
+  "block w-full select appearance-none relative shadow-xs rounded-md bg-background ps-4 pe-10 py-2 text-sm text-foreground transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:border-ring disabled:cursor-not-allowed disabled:opacity-50 [&_option]:rounded-md [&_option]:p-2";
 
 const optionBaseClasses =
   "px-3 py-1.5 text-foreground hover:bg-foreground/10 active:bg-neutral active:text-neutral-content disabled:text-foreground/40";
@@ -151,18 +147,18 @@ const selectClasses = cn(
   selectVariants({ variant }),
   !showCheckmark && "hide-checkmark",
 );
-const optionClasses = cn(optionBaseClasses, optionClass);
+
 const controlId =
-  id || name || `select-${Math.random().toString(36).slice(2, 9)}`;
+  id ||
+  (rest as Record<string, any>).name ||
+  `select-${Math.random().toString(36).slice(2, 9)}`;
+
+const selectedValue = (rest as Record<string, any>).value ?? "";
 ---
 
 <div class={cn("relative")}>
   <select
     id={controlId}
-    name={name}
-    value={value}
-    required={required}
-    disabled={disabled}
     class={cn("select", selectClasses, className)}
     {...rest}
   >
@@ -172,13 +168,11 @@ const controlId =
           const isObject = typeof opt === "object";
           const optionValue = isObject ? opt.value : opt;
           const optionLabel = isObject ? (opt.label ?? opt.value) : opt;
-          const optionDisabled = isObject ? Boolean(opt.disabled) : false;
+
           return (
             <option
               value={optionValue}
-              selected={value === optionValue}
-              disabled={optionDisabled}
-              class={optionClasses}
+              selected={selectedValue === optionValue}
             >
               {optionLabel}
             </option>
@@ -218,9 +212,8 @@ const controlId =
       @supports (appearance: base-select) {
         appearance: base-select;
       }
-      max-height: 20dvh;
-      border-color: var(--color-border);
-      @apply rounded-md my-2 p-1 shadow-sm bg-popover text-popover-foreground;
+      border-color: var(--border);
+      @apply rounded-lg my-2 p-1 shadow-lg bg-popover text-popover-foreground;
     }
     &::picker-icon {
       @apply hidden;
@@ -259,15 +252,8 @@ const controlId =
 
 ## Props
 
-| Name | Type | Required | Default | Description |
-|---|---|:---:|---|---|
-| label | `string` | No | "" |  |
-| value | `string` | No | "" |  |
-| name | `string` | No | "" |  |
-| id | `string` | No | "" |  |
-| required | `boolean` | No | false |  |
-| disabled | `boolean` | No | false |  |
-| variant | `"default" \| "ghost" \| "neutral"` | No | "default" |  |
-| optionClass | `string` | No | "" |  |
-| class | `string` | No | "" |  |
-| showCheckmark | `boolean` | No | true |  |
+| Prop | Type | Default |
+|---|---|---|
+| <code>variant</code> | `"default" \| "ghost" \| "neutral"` | `"default"` |
+| <code>showCheckmark</code> | `boolean` | `true` |
+| <code>options</code> | `Array< string \| { value: string; label?: string; disabled?: boolean } >` | `[]` |
