--- a/apps/web/src/content/docs/index-2.mdx
+++ b/apps/web/src/content/docs/index-2.mdx
@@ -13,16 +13,16 @@ hero:
 import { Card, CardGrid } from "@astrojs/starlight/components";
 import Button from "@bejamas/ui/components/Button.astro";
 import CanvasHero from "@/components/CanvasHero.astro";
+import BrowserHero from "@/components/BrowserHero.astro";
 
-<div class="not-content relative py-20 w-full flex justify-center flex-col left-0 top-0 items-center z-10 pointer-events-none">
-  <h1 class="text-5xl font-medium text-center text-balance block mb-10 max-w-2xl">
+<div class="not-content relative items-start py-10 w-full flex justify-start flex-col left-0 top-0 z-10 pointer-events-none">
+  <h1 class="text-5xl font-medium text-left text-balance block mb-10 max-w-2xl">
     The UI system for Astro. Copy. Customize. Ship.
   </h1>
-  <div class="flex justify-center">
-    <Button as="a" href="/docs/introduction" class="pointer-events-auto">
-      Get Started
-    </Button>
-  </div>
+  <Button as="a" href="/docs/introduction" class="pointer-events-auto">
+    Get Started
+  </Button>
 </div>
 
-<CanvasHero />
+<BrowserHero />
+{/* <CanvasHero /> */}
