--- a/apps/web/src/content/docs/docs/dark-mode.mdx
+++ b/apps/web/src/content/docs/docs/dark-mode.mdx
@@ -2,7 +2,7 @@
 title: Dark Mode
 description: Adding dark mode to your Astro project.
 sidebar:
-  order: 4
+  order: 6
 ---
 
 import ThemeSwitcher from "@/components/ThemeSwitcher.astro";
@@ -13,32 +13,37 @@ Adding dark mode to your Astro project.
 
 ```astro title="src/layouts/index.astro"
 ---
-import '../styles/globals.css'
+import "../styles/globals.css";
 ---
 
 <script is:inline>
-	const getThemePreference = () => {
-		if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
-			return localStorage.getItem('theme');
-		}
-		return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-	};
-	const isDark = getThemePreference() === 'dark';
-	document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
+  const getThemePreference = () => {
+    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
+      return localStorage.getItem("theme");
+    }
+    return window.matchMedia("(prefers-color-scheme: dark)").matches
+      ? "dark"
+      : "light";
+  };
+  const isDark = getThemePreference() === "dark";
+  document.documentElement.classList[isDark ? "add" : "remove"]("dark");
 
-	if (typeof localStorage !== 'undefined') {
-		const observer = new MutationObserver(() => {
-			const isDark = document.documentElement.classList.contains('dark');
-			localStorage.setItem('theme', isDark ? 'dark' : 'light');
-		});
-		observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
-	}
+  if (typeof localStorage !== "undefined") {
+    const observer = new MutationObserver(() => {
+      const isDark = document.documentElement.classList.contains("dark");
+      localStorage.setItem("theme", isDark ? "dark" : "light");
+    });
+    observer.observe(document.documentElement, {
+      attributes: true,
+      attributeFilter: ["class"],
+    });
+  }
 </script>
 
 <html lang="en">
-	<body>
-      <h1>Astro</h1>
-	</body>
+  <body>
+    <h1>Astro</h1>
+  </body>
 </html>
 ```
 
@@ -109,16 +114,15 @@ Place a mode toggle on your site to toggle between light and dark mode.
 
 ```astro title="src/pages/index.astro"
 ---
-import '../styles/globals.css'
-import { ModeToggle } from '@/components/ModeToggle';
+import "../styles/globals.css";
+import { ModeToggle } from "@/components/ModeToggle";
 ---
 
 <!-- Inline script -->
-
 <html lang="en">
-	<body>
-      <h1>Astro</h1>
-      <ModeToggle client:load />
-	</body>
+  <body>
+    <h1>Astro</h1>
+    <ModeToggle client:load />
+  </body>
 </html>
 ```
